# diablo-2-map-editor

./: .gitignore  BUILD_SUCCESS.md  CLEANUP_SUMMARY.md  Diablo 2 Map Editor.sln  PROJECT_STATUS.md  README.md  TESTING_FRAMEWORK_PLAN.md  TEST_STATUS.md  UNUSED_CODE_CLEANUP_SUMMARY.txt  allegro5_compat.h  allegro5_stubs.c  allegro_stubs.c  allegro_stubs_fixed.c  anim.c  build.bat  build_fixed.bat  build_minimal.bat  build_msvc.bat  build_tests.bat  dc6info.c  dccinfo.c  dccinfo.h  dinput_constants.c  editobj.c  editobj.h  font_fix.h  interfac.c  main.c  misc.c  package.bat  png_output.c  png_output.h  run_comprehensive_tests.bat  run_tests.bat  setup_gtest.bat  structs.h  test_allegro.c  test_basic.bat  test_ds1_build_and_functionality.bat  test_main.c  (+5 more)
allegro_src/include/: debug.c  display.c  events.c  file_stdio.c  fshook_stdio.c  keybdnu.c  mousenu.c  shader.c  system.c  timernu.c  tls.c  transformations.c  utf8.c
docs/: LINK-FIX-SUMMARY.md  ORGANIZATION-SUMMARY.md  README.md
docs/01-Getting-Started/: DS1-Editor-Complete-Documentation.html  DS1-Editor-Complete-Documentation.md  DS1-Editor-Download-And-Overview.html  DS1-Editor-Download-And-Overview.md
mpq/: mpqtypes.h
tests/: CMakeLists.txt  DS1EditorFunctionalTests.cs  DS1EditorImageIntegrationTests.cs  DS1EditorTestFrameworkValidationTests.cs  DS1EditorTestRunner.cs  DS1EditorTests.csproj  DS1EditorUnitTests.cs  IMAGE_VALIDATION_README.md  README.md  RunTests.bat  RunTests.ps1  TEST_RESULTS_SUMMARY.md  build_and_run_tests.bat  ds1editor_file_test.cpp  ds1editor_keyboard_test.cpp  ds1editor_test.cpp  simple_test.cpp
tests/cpp/unit/: README.md  test_ds1_misc.cpp
tests/output/: master_test_results.txt
(+81 files in other folders)
